# led-drive

./: CMakeLists.txt  README.adoc  sync.sh
src/: color.cpp  color.h  led.cpp  led.h  main.cpp  pattern.cpp  pattern.h  spidevice-bcm2835.h  spidevice-spidev.cpp  spidevice-spidev.h  spidevice.h
